[package]
name = "HyokaSearch"
version = "0.1.0"
authors = ["EmptyChan <chen19941018@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.6.1"
jieba-rs = "0.4.10"
rocket = "*"
serde = "*"
parking_lot = "*"
heed = "0.5.0"